# vzctl

./: .gitignore  CLAUDE.md  README.md  example-config.yaml  production.sh  pyproject.toml  staging.sh
vzctl/: api.py  config.py  main.py
vzctl/commands/: delete.py  deploy.py  list_vars.py  logs.py  restart.py  sync.py
