[project]
name = "vzctl"
version = "0.1.0"
description = "CLI tool for managing environment variables and nodes on Virtuozzo-based PaaS platforms."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
vzctl = "vzctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
